--- a/views/Html/Login.html
+++ b/views/Html/Login.html
@@ -30,7 +30,7 @@
                 </div>
                 
                 <div class="mb-3">
-                <button type="button"  class="btn btn-primary">Submit</button>
+                <button type="button"  class="btn btn-primary">Iniciar sesion</button>
             </form>
         </div>
 
