--- a/views/Html/Registro.html
+++ b/views/Html/Registro.html
@@ -40,7 +40,7 @@
                         <option value="admin">Admin</option>
                     </select>
                 <div class="mb-3">
-                <button type="button" id="Submit-button" class="btn btn-primary">Submit</button>
+                <button type="button" id="Submit-button" class="btn btn-primary">Registrarme</button>
             </form>
         </div>
 
